@@ -38,7 +38,7 @@ Version 2.16
   14040, 14043, 14044, 14048, 14049, 14050, 14053, 14055, 14059, 14064,
   14075, 14080, 14083, 14103, 14104, 14109, 14112, 14117, 14122, 14123,
   14134, 14153, 14183, 14188, 14199, 14210, 14218, 14229, 14241, 14273,
-  14277, 14278
+  14277, 14278, 16882
 
 * Support for the x32 ABI on x86-64 added.  The x32 target is selected by
   configuring glibc with:
